moderate htms, css

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -6,7 +6,7 @@
       <!-- End Meta Pixel Code -->
 
       <meta name="viewport" content="width=device-width" />
-      <title>Набір світильників LED з пультом керування</title>
+      <title>Набір яскравих LED світильників 3шт, на батарейках, з пультом керування</title>
 
       <link rel="shortcut icon" href="./images/svg-light-3.svg" type="image/x-icon" />
 
@@ -20,77 +20,96 @@
          <a href="#top" class="top-btn" title="вгору">↑</a>
          <header class="offer_section offer3">
             <div class="title_block">
-               <h1 class="main_title">Набір із трьох LED світильників</h1>
-               <p class="subtitle">З пультом, на батарейках</p>
+               <h1 class="main_title">
+                  Набір яскравих 3шт <br />
+                  LED-світильників
+               </h1>
+               <p class="subtitle">з пультом керування, на батарейках</p>
             </div>
 
             <div class="image_block">
                <img class="offer_image" src="./images/lights-3-1.jpg" alt="точкові led світильники в кухні" />
                <div class="discount_block">
-                  <div class="value">30%</div>
+                  <div class="value">-25%</div>
                   <div class="text">знижка</div>
                </div>
             </div>
 
             <div class="benefits_list clearfix">
-               <div class="benefit_item">Якість гарантована</div>
-               <div class="benefit_item">Обмежена пропозиція</div>
-               <div class="benefit_item">Оплата при отриманні</div>
+               <div class="benefit_item">100% товар високої якості</div>
+               <div class="benefit_item">Кількість обмежена</div>
+               <div class="benefit_item">Відправка з післясплатою</div>
             </div>
 
             <div class="price_block clearfix">
                <div class="price_item old">
-                  <div class="text">Звичайна ціна:</div>
-                  <div class="value">399 грн</div>
+                  <div class="text">Роздрібна ціна:</div>
+                  <div class="value">625 грн</div>
                </div>
                <div class="price_item new">
-                  <div class="text"><span>Ви економите 30%</span></div>
-                  <div class="value">299 грн</div>
+                  <div class="text"><span> економія 160 грн...</span></div>
+                  <div class="value">465 грн</div>
                </div>
             </div>
             <div style="padding: 15px; text-align: center">
                <p>
-                  Знижка діє на весь товар інтернет-магазину з <span class="date-from">31.10</span> по
-                  <span class="date-to">08.11</span> на всій території України, крім зон, що не контролюються владою
+                  Замовте зараз <b> за зниженою ціною - всього 465 грн</b> замість звичайних <s> 625 грн.</s>
+
+                  Знижка діє <span class="date-from">31.10</span> по
+                  <span class="date-to">08.11</span>
+                  Відправка <b>Новою Поштою</b> накладеним платежем по всій території України, крім тимчасово окупованих
+                  територій
                </p>
             </div>
             <ul>
-               <li>Низьке споживання енергії батарей</li>
-               <li>Керування пультом</li>
-               <li>Працює від батарейок</li>
-               <li>Два режими налаштування яскравості</li>
-               <li>Можливість встановлення таймера</li>
+               <li>Економічне споживання енергії</li>
+               <li>Управління за допомогою пульта</li>
+               <li>Живлення здійснюється від батарейок</li>
+               <li>Доступні два режими регулювання яскравості</li>
+               <li>Таймер виключення на 30 хвилин</li>
             </ul>
             <a href="index.html#form" class="button">
                <div class="button-hover"></div>
-               <span> Замовити зі знижкою</span>
+               <span> Придбати зі знижкою</span>
             </a>
-            <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div>
+            <div class="products_count">
+               Другий набір доступний за спеціальною ціною - всього за: <span class="lastpack">399 грн</span>
+            </div>
          </header>
          <section class="dark_theme s2">
-            <h2 class="title"><span>Переваги</span></h2>
+            <h2 class="title"><span>Особливості</span></h2>
             <div class="benefits_list1 x_icon">
                <div class="benefit_item">
-                  <h2>ВСТАНОВЛЕННЯ ТАЙМЕРУ ТА НАЛАШТУВАННЯ ЯСКРАВОСТІ ЗА ДОПОМОГОЮ ПУЛЬТА</h2>
+                  <h2>РЕГУЛЮВАННЯ ЯСКРАВОСТІ LED-СВІТІННЯ</h2>
 
                   <img src="./images/lights-1.jpg" alt="low and hight lights" />
-                  <p>Він оснащений дистанційним керуванням, регулятором яскравості та 30-хвилинним таймером.</p>
-               </div>
-               <div class="benefit_item">
-                  <h2>УЛЬТРА ЯСКРАВІ ЛАМПИ ЯКІ ПРАЦЮЮТЬ ВІД БАТАРЕЙОК</h2>
-                  <img class="offer_image" src="./images/04.webp" alt="lamp body" />
                   <p>
-                     Живлення яким здійснюється за рахунок батарей ААА. Ви зможете включати його незалежно від електрики
-                     міської мереж
+                     Яскравість світіння може просто і зручно регулюватися за допомогою пульта дистанційного керування.
                   </p>
                </div>
                <div class="benefit_item">
-                  <h2>ПІДХОДИТЬ ДЛЯ ОСВІТЛЕННЯ БУДЬ ЧОГО</h2>
+                  <h2>ЯСКРАВІ LED-СВІТИЛЬНИКИ ПРАЦЮЮТЬ ВІД БАТАРЕЙОК</h2>
+                  <img class="offer_image" src="./images/04.webp" alt="lamp body" />
+                  <p>
+                     Led-світильники - забезпечать вас яскравим світлом незалечно від наявності електро-енергії в
+                     мережі, - адже вони працюють на батарейках типу ААА.
+                  </p>
+               </div>
+               <div class="benefit_item">
+                  <h2>
+                     ДОДАТКОВЕ LED-СВІТЛО ДЛЯ БУДЬ-ЯКИХ <br />
+                     ПОТРЕБ ТА ПРИМІЩЕНЬ
+                  </h2>
                   <img src="./images/coulage-1.jpg" alt="led lights coulage" />
                   <p>
-                     Такий світильник, ви зможете встановити куди завгодно( шаф, кухонної стільниці, гараж, підвал,
-                     комори, сходів та ін.), і Вам зовсім не потрібно буде свердлити стіни – фіксація відбувається за
-                     рахунок двостороннього скотчу;
+                     Набір з трьох LED-світильників має універсальне застосування і може слугувати як освітлення для
+                     кухні, шафи, дитячої кімнати, автомобіля, підвалу, гаражу, кладової, коридору, ванної, спальні,
+                     тощо.
+                  </p>
+                  <br />
+                  <p>
+                     Проста фіксація за рахунок наявного двостороннього скотчу на зворотній частині LED-лампи дає змогу
+                     забезпечити світлои будь-який куточок Вашої оселі.
                   </p>
                </div>
             </div>
@@ -111,20 +130,21 @@
             </div>
             <div class="text_block">
                <p>
-                  <b
-                     >Набір LED ламп - оригінальний і зручний набір ламп у класичному дизайні. Має два режими
-                     налаштування яскравості свічення. Також є можливість налаштування яскравості ламп за допомогою
-                     пульта. Оснащений функцією таймера на 30 хв для автоматичного вимкнення лампи. Тепер Вам не варто
-                     боятися позапланових відключень електроенергії. Ліхтар виручить Вас у самих непередбачених
-                     ситуаціях!
-                  </b>
+                  Це <strong>унікальний та зручний набір LED ламп</strong> у класичному дизайні. Лампи мають
+                  <strong>два режими яскравості</strong> світіння, а також можливість регулювання яскравості за
+                  допомогою пульта дистанційного керування. Вони обладнані <strong>таймером на 30 хв</strong>, що
+                  автоматично вимикає лампу. Тепер вам
+                  <strong
+                     >не потрібно перейматися через непередбачені відключення електроенергії у разі BlackOut</strong
+                  >
+                  — цей ліхтар буде вашим надійним помічником у подібних ситуаціях.
                </p>
             </div>
             <a href="index.html#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
             </a>
-            <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
+            <div class="products_count">Залишилося <span class="lastpack">менше < 20</span> наборів</div>
             <img src="./images/lights-2.jpg" class="thumb" />
          </section>
          <section class="s4">
@@ -175,48 +195,38 @@
                <div class="button-hover"></div>
                <span> Замовити зі знижкою</span>
             </a>
-            <div class="products_count">Залишилося <span class="lastpack">7</span> штук по акції</div>
+            <div class="products_count">Залишилося <span class="lastpack"> менше < 20</span> акційних наборів</div>
          </section>
 
          <section class="reviews4_section s8">
             <h2 class="title">Відгуки покупців</h2>
             <div class="reviews_stats_block">
-               <p><b>98%</b> покупців рекомендують цей товар</p>
+               <p><b>97,6% покупців рекомендують цей товар</b></p>
                <div class="line"></div>
             </div>
             <div class="reviews_list4">
                <div class="review_item">
-                  <img
-                     style="width: 180px"
-                     class="photo"
-                     src="./images/testimonal-1.webp"
-                     alt="lights at night in a dark"
-                  />
+                  <img class="photo" src="./images/testim-4.webp" alt="lights at night in a dark" />
                   <div class="text_block">
-                     <div class="author_info">Дмитро, 43 роки, Київ</div>
+                     <div class="author_info">Наталя, 26 років, Вінниця</div>
                      <p>
-                        Сказати, що я задоволений - нічого не сказати! Супер якість! Дуже яскраво світить. Я задоволений
+                        Дуже яскраво світять. Радує два режими яскравості, використовую як нічник для спальні. Вимкненя
+                        з пульта - це дуже зручне.
                      </p>
                   </div>
                </div>
                <div class="review_item">
-                  <img class="photo" style="width: 320px" src="./images/testimonal-2.webp" alt="lights in a kitchen" />
+                  <img class="photo" src="./images/testimonal-2.jpg" alt="lights in a kitchen" />
                   <div class="text_block">
-                     <div class="author_info">Ірина, 35 років, Житомир</div>
-                     <p>
-                        Світяться добре та дуже яскраво. Хватає щоб освітити кімнату повністью, та ще й тримают доволі
-                        довго, я задоволена. До блекауту готова). Рекомендую
-                     </p>
+                     <div class="author_info">Оксана, Київ</div>
+                     <p>Довго працюють від батарейок, легкі. Двосторонній скотч дуже міцно кріпиться.</p>
                   </div>
                </div>
                <div class="review_item">
-                  <img class="photo" style="width: 195px" src="./images/13-1.jpg" alt="pachage with led lights of 3" />
+                  <img class="photo" src="./images/testim-7.webp" alt="pachage with led lights of 3" />
                   <div class="text_block">
-                     <div class="author_info">Катерина, 29 років, Житомир</div>
-                     <p>
-                        Вирішив купити на осінь та зиму і був приємно задоволенний, добре освітлює кімнату. Запаковано
-                        добре,товар відповідає картинці)
-                     </p>
+                     <div class="author_info">Олександр, 32 роки, Дніпро</div>
+                     <p>Якісні і доступні світильники. Вирішив купити на пробу - буду замоляти ще. Все супер.</p>
                   </div>
                </div>
             </div>
@@ -224,7 +234,6 @@
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
             </a>
-            <div class="products_count">Залишилося <span class="lastpack">7</span>штук по акції</div>
          </section>
          <section class="order_info2_section">
             <h2 class="title">Доставка і оплата</h2>
@@ -232,22 +241,25 @@
                <div class="info_item">
                   <img src="./images/доставка/images.jpg" alt="delivery car and man with box" />
                   <div class="text_block">
-                     <h4>Доставка</h4>
-                     <p>Новою Поштою протягом 1-3 днів.</p>
+                     <h4>Зручна доставка</h4>
+                     <p>
+                        Доставка <span class="bg-red"> &nbsp;Новою Поштою&nbsp; </span>накладеним платежем від 1го до 3х
+                        днів.
+                     </p>
                   </div>
                </div>
                <div class="info_item">
                   <img src="./images/оплата/oplata-img.png" alt="wallet and cash" />
                   <div class="text_block">
-                     <h4>Оплата</h4>
-                     <p>Оплата замовлень здійснюється тільки за фактом отримання товару в поштовому відділенні</p>
+                     <h4>Зручна оплата</h4>
+                     <p>Отримайте товар у відділенні та сплатіть на місці</p>
                   </div>
                </div>
                <div class="info_item">
                   <img src="./images/гарантія/garantiya.png" alt="garanty label" />
                   <div class="text_block">
-                     <h4>Гарантії</h4>
-                     <p>Ми завжди перевіряємо товар перед відправкою і гарантуємо 100% якість</p>
+                     <h4>100% якісний продукт</h4>
+                     <p>Більше ніж 800 покупців вже оцінили якість та ефективність цього набору LED-світильників</p>
                   </div>
                </div>
             </div>
@@ -262,15 +274,15 @@
             <img class="offer_image" src="./images/02.webp" alt="набір світильників світлодіодних 3 шт" /> -->
 
             <div class="title_block">
-               <h1 class="main_title">Набір із трьох LED світильників</h1>
-               <p class="subtitle">З пультом, на батарейках</p>
+               <h2 class="main_title">Набір яскравих 3шт <br />LED-світильників</h2>
+               <p class="subtitle">З пультом керування, на батарейках</p>
             </div>
 
             <div class="image_block">
                <img class="offer_image" src="./images/coulage-5.jpg" alt="coulage of lights" />
 
                <div class="discount_block">
-                  <div class="value">30%</div>
+                  <div class="value">-25%</div>
                   <div class="text">знижка</div>
                </div>
             </div>
@@ -282,20 +294,26 @@
             <div class="price_block clearfix">
                <div class="price_item old">
                   <div class="text">Звичайна ціна:</div>
-                  <div class="value">399 грн</div>
+                  <div class="value">625 грн</div>
                </div>
                <div class="price_item new">
-                  <div class="text"><span>Ви економите 30%</span></div>
-                  <div class="value">299 грн</div>
+                  <div class="text"><span>економія 160грн...</span></div>
+                  <div class="value">465 грн</div>
                </div>
             </div>
             <div style="padding: 15px; text-align: center">
                <p>
-                  Знижка діє на весь товар інтернет-магазину з <span class="date-from">31.10</span> по
-                  <span class="date-to">08.11</span> на всій території України, крім зон, що не контролюються владою
+                  Замовте зараз <b> за зниженою ціною - всього 465 грн</b> замість звичайних <s> 625 грн.</s>
+
+                  Знижка діє <span class="date-from">31.10</span> по
+                  <span class="date-to">08.11</span>
+                  Відправка <b>Новою Поштою</b> накладеним платежем по всій території України, крім тимчасово окупованих
+                  територій
                </p>
             </div>
-            <p class="limited">Залиште заявку та наш менеджер зателефонує Вам для уточнення деталей замовлення</p>
+
+            <p class="limited">Залиште заявку та ми зателефонуємо Вам для уточнення деталей</p>
+            <div class="products_count">Залишилося <span class="lastpack"> менше < 20</span> комплектів</div>
             <form id="form" class="order_form">
                <input type="hidden" name="sendemail" value="yes" /><input type="hidden" name="redirect" value="yes" />
 
@@ -307,7 +325,7 @@
                   <span>Оформити замовлення</span>
                </button>
             </form>
-            <div class="products_count">Другий набір за<span class="lastpack">249 грн</span></div>
+            <div class="products_count">Другий набір за супер ціною <span class="lastpack">399 грн</span></div>
          </section>
          <footer class="footer_section">
             <!-- <div style="text-align: center">
