--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -77,45 +77,45 @@
             </div>
          </header>
          <section class="dark_theme s2">
-            <h2 class="title"><span>Особливості</span></h2>
+            <p class="title"><span>Особливості</span></p>
             <div class="benefits_list1 x_icon">
                <div class="benefit_item">
-                  <h2>РЕГУЛЮВАННЯ ЯСКРАВОСТІ LED-СВІТІННЯ</h2>
-
-                  <img src="./images/lights-1.jpg" alt="low and hight lights" />
+                  <h2>
+                     1. <span hidden>LED-СВІТИЛЬНИКИ</span>ПІДХОДЯТЬ ДЛЯ БУДЬ-ЯКОГО <br />
+                     ТИПУ ПРИМІЩЕНЬ<span hidden>: КУХНІ, СПАЛЬНІ, ШАФИ, ВАННОЇ, ДИТЯЧОЇ КІМНАТИ, ТА ІН.</span>
+                  </h2>
+                  <img src="./images/coulage-1.jpg" alt="led lights coulage" />
                   <p>
-                     Яскравість світіння може просто і зручно регулюватися за допомогою пульта дистанційного керування.
+                     Ці чудові <strong> LED-світильники</strong> мають універсальне застосування і можуть слугувати як
+                     <strong> додаткове світло для кухні, ванної, спальні. </strong>А також чудово підійдуть для
+                     освітлення шафи, дитячої кімнати, автомобіля, підвалу, гаражу, кладової, коридору, тощо.
                   </p>
                </div>
                <div class="benefit_item">
-                  <h2>ЯСКРАВІ LED-СВІТИЛЬНИКИ ПРАЦЮЮТЬ ВІД БАТАРЕЙОК</h2>
+                  <h2>2. МОЖНА РЕГУЛЮВАТИ ЯСКРАВІСТЬ <span hidden>- НАБІР ЛІХТАРИКІВ З ПУЛЬТОМ КЕРУВАННЯ</span></h2>
+
+                  <img src="./images/lights-1.jpg" alt="low and hight lights" />
+                  <p>Яскравість світіння просто і зручно регулюється за допомогою пульта дистанційного керування.</p>
+                  <br />
+                  <p>
+                     А надійна фіксація за рахунок двостороннього скотчу на зворотній частині LED-лампи дає змогу
+                     забезпечити світлои будь-який куточок Вашої оселі.
+                  </p>
+               </div>
+               <div class="benefit_item">
+                  <h2>3.<span hidden>ЯСКРАВІ ТОЧКОВІ LED-СВІТИЛЬНИКИ (НАБІР)</span> ПРАЦЮЮТЬ НА БАТАРЕЙКАХ</h2>
                   <img class="offer_image" src="./images/04.webp" alt="lamp body" />
                   <p>
                      Led-світильники - забезпечать вас яскравим світлом незалечно від наявності електро-енергії в
                      мережі, - адже вони працюють на батарейках типу ААА.
                   </p>
                </div>
-               <div class="benefit_item">
-                  <h2>
-                     ДОДАТКОВЕ LED-СВІТЛО ДЛЯ БУДЬ-ЯКИХ <br />
-                     ПОТРЕБ ТА ПРИМІЩЕНЬ
-                  </h2>
-                  <img src="./images/coulage-1.jpg" alt="led lights coulage" />
-                  <p>
-                     Набір з трьох LED-світильників має універсальне застосування і може слугувати як освітлення для
-                     кухні, шафи, дитячої кімнати, автомобіля, підвалу, гаражу, кладової, коридору, ванної, спальні,
-                     тощо.
-                  </p>
-                  <br />
-                  <p>
-                     Проста фіксація за рахунок наявного двостороннього скотчу на зворотній частині LED-лампи дає змогу
-                     забезпечити світлои будь-який куточок Вашої оселі.
-                  </p>
-               </div>
             </div>
          </section>
          <section class="description_section s3">
-            <h2 class="title"><span>Подивіться як це просто</span></h2>
+            <p class="title"><span>Подивіться як це просто</span></p>
+            <h3 class="title">4. Зручні та прості у користування <span hidden>світильники LED</span></h3>
+
             <div class="video_block">
                <div class="youtube" id="YTLWfE-k_Fc">
                   <video
@@ -130,14 +130,14 @@
             </div>
             <div class="text_block">
                <p>
-                  Це <strong>унікальний та зручний набір LED ламп</strong> у класичному дизайні. Лампи мають
+                  Це <strong>унікальний та супер-зручний набір LED ламп</strong> у класичному дизайні. Лампи мають
                   <strong>два режими яскравості</strong> світіння, а також можливість регулювання яскравості за
                   допомогою пульта дистанційного керування. Вони обладнані <strong>таймером на 30 хв</strong>, що
-                  автоматично вимикає лампу. Тепер вам
-                  <strong
-                     >не потрібно перейматися через непередбачені відключення електроенергії у разі BlackOut</strong
-                  >
-                  — цей ліхтар буде вашим надійним помічником у подібних ситуаціях.
+                  автоматично вимикає лампу.
+               </p>
+               <p>
+                  Тепер вам не потрібно перейматися через непередбачені відключення електроенергії.
+                  <strong>У разі BlackOut — цей ліхтар буде вашим надійним помічником</strong> у подібних ситуаціях.
                </p>
             </div>
             <a href="index.html#form" class="button">
@@ -148,7 +148,7 @@
             <img src="./images/lights-2.jpg" class="thumb" />
          </section>
          <section class="s4">
-            <h2 class="title">ХАРАКТЕРИСТИКИ</h2>
+            <p class="title">ХАРАКТЕРИСТИКИ</p>
             <div class="benefits_list3">
                <div class="benefit_item">
                   <img src="./images/dimensions-4.jpg" alt="light front and in profile" />
@@ -199,7 +199,7 @@
          </section>
 
          <section class="reviews4_section s8">
-            <h2 class="title">Відгуки покупців</h2>
+            <p class="title">Відгуки покупців</p>
             <div class="reviews_stats_block">
                <p><b>97,6% покупців рекомендують цей товар</b></p>
                <div class="line"></div>
@@ -236,7 +236,7 @@
             </a>
          </section>
          <section class="order_info2_section">
-            <h2 class="title">Доставка і оплата</h2>
+            <p class="title">Доставка і оплата</p>
             <div class="order_info_list2">
                <div class="info_item">
                   <img src="./images/доставка/images.jpg" alt="delivery car and man with box" />
@@ -325,7 +325,7 @@
                   <span>Оформити замовлення</span>
                </button>
             </form>
-            <div class="products_count">Другий набір за супер ціною <span class="lastpack">399 грн</span></div>
+            <div class="products_count">Другий набір за супер-ціною <span class="lastpack bg-red">399 грн</span></div>
          </section>
          <footer class="footer_section">
             <!-- <div style="text-align: center">
