--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -53,9 +53,8 @@
             </div>
             <div style="padding: 15px; text-align: center">
                <p>
-                  Замовте зараз <b> за зниженою ціною - всього 465 грн</b> замість звичайних <s> 625 грн.</s>
-
-                  Знижка діє <span class="date-from">31.10</span> по
+                  Замовте зараз <b> за зниженою ціною - всього 465 грн</b> замість звичайних <s> 625 грн.</s> Знижка діє
+                  <span class="date-from">31.10</span> по
                   <span class="date-to">08.11</span>
                   Відправка <b>Новою Поштою</b> накладеним платежем по всій території України, крім тимчасово окупованих
                   територій
@@ -77,7 +76,7 @@
             </div>
          </header>
          <section class="dark_theme s2">
-            <p class="title"><span>Особливості</span></p>
+            <p class="title">Надзвичайно просто <br />та комфортно</p>
             <div class="benefits_list1 x_icon">
                <div class="benefit_item">
                   <h2>
@@ -113,7 +112,7 @@
             </div>
          </section>
          <section class="description_section s3">
-            <p class="title"><span>Подивіться як це просто</span></p>
+            <p class="title"><span>Оцініть, наскільки це легко</span></p>
             <h3 class="title">4. Зручні та прості у користування <span hidden>світильники LED</span></h3>
 
             <div class="video_block">
@@ -144,11 +143,12 @@
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
             </a>
-            <div class="products_count">Залишилося <span class="lastpack">менше < 20</span> наборів</div>
-            <img src="./images/lights-2.jpg" class="thumb" />
+            <div class="products_count">Залишилося <span class="lastpack">менше &lt; 20</span> наборів</div>
+            <img src="./images/lights-2.jpg" class="thumb" alt="hand with remote controller" />
          </section>
          <section class="s4">
-            <p class="title">ХАРАКТЕРИСТИКИ</p>
+            <p class="title">Характеристики</p>
+            <h3 class="title">Круглі світлодіодні світильники вразять вас якістю та тривалістю роботи</h3>
             <div class="benefits_list3">
                <div class="benefit_item">
                   <img src="./images/dimensions-4.jpg" alt="light front and in profile" />
@@ -168,6 +168,14 @@
                      <ul>
                         <li><strong>Живлення пульта: </strong>2 батареї AAA</li>
                         <li><strong>Розмір пульта: </strong>8 x 6 см</li>
+                        <li>
+                           <ul>
+                              <li><strong>Функції керування:</strong></li>
+                              <li>&nbsp; - Керування декількома світильниками (вкл/викл.)</li>
+                              <li>&nbsp; - Зміна режиму яскравості</li>
+                              <li>&nbsp; - Таймер виключення</li>
+                           </ul>
+                        </li>
                      </ul>
                   </div>
                </div>
@@ -177,15 +185,16 @@
                   <div class="text_block">
                      <ul>
                         <li><strong>Комплектація: </strong></li>
-                        <li>LED-світильники - 3шт</li>
+                        <li>Точкові пластикові LED-світильники круглої форми - 3шт</li>
                         <li>Пульт керування - 1шт</li>
-                        <li>(батареї AAA - <strong>не входять у комплект </strong>)</li>
+                        <li>(батареї не входять у комплект)</li>
                      </ul>
                   </div>
                </div>
             </div>
          </section>
          <section class="description_section s5">
+            <h3 class="title">Компактні та легкі <span hidden>точкові світильники</span></h3>
             <div class="img">
                <img src="./images/06-1.jpg" alt="light in hand" />
                <img src="./images/08-1.jpg" alt="light and remote controller" />
@@ -195,10 +204,10 @@
                <div class="button-hover"></div>
                <span> Замовити зі знижкою</span>
             </a>
-            <div class="products_count">Залишилося <span class="lastpack"> менше < 20</span> акційних наборів</div>
+            <div class="products_count">Залишилося <span class="lastpack"> менше &lt; 20</span> акційних наборів</div>
          </section>
-
          <section class="reviews4_section s8">
+            <h3 hidden>Найкращий з продажів серед товарів до БлекАуту</h3>
             <p class="title">Відгуки покупців</p>
             <div class="reviews_stats_block">
                <p><b>97,6% покупців рекомендують цей товар</b></p>
@@ -208,10 +217,10 @@
                <div class="review_item">
                   <img class="photo" src="./images/testim-4.webp" alt="lights at night in a dark" />
                   <div class="text_block">
-                     <div class="author_info">Наталя, 26 років, Вінниця</div>
+                     <div class="author_info">Наталія, 26 років, Вінниця</div>
                      <p>
-                        Дуже яскраво світять. Радує два режими яскравості, використовую як нічник для спальні. Вимкненя
-                        з пульта - це дуже зручне.
+                        Дуже сподобались світильники. Використовую на кухні та в спальні - коли не хочеться зайвий раз
+                        вставати, щоб вимкнути світло. Замовила ще сестрі. 100% допоможуть при блекауті.
                      </p>
                   </div>
                </div>
@@ -219,14 +228,14 @@
                   <img class="photo" src="./images/testimonal-2.jpg" alt="lights in a kitchen" />
                   <div class="text_block">
                      <div class="author_info">Оксана, Київ</div>
-                     <p>Довго працюють від батарейок, легкі. Двосторонній скотч дуже міцно кріпиться.</p>
+                     <p>Користуюсь два тижні. Дуже зручні у використанні. Легко кріпляться на двосторонній скотч.</p>
                   </div>
                </div>
                <div class="review_item">
                   <img class="photo" src="./images/testim-7.webp" alt="pachage with led lights of 3" />
                   <div class="text_block">
                      <div class="author_info">Олександр, 32 роки, Дніпро</div>
-                     <p>Якісні і доступні світильники. Вирішив купити на пробу - буду замоляти ще. Все супер.</p>
+                     <p>Якісні і доступні світильники. Вирішив купити на пробу - буду замоляти ще. Все супер!</p>
                   </div>
                </div>
             </div>
@@ -251,7 +260,7 @@
                <div class="info_item">
                   <img src="./images/оплата/oplata-img.png" alt="wallet and cash" />
                   <div class="text_block">
-                     <h4>Зручна оплата</h4>
+                     <h4>Захищена оплата</h4>
                      <p>Отримайте товар у відділенні та сплатіть на місці</p>
                   </div>
                </div>
@@ -313,17 +322,19 @@
             </div>
 
             <p class="limited">Залиште заявку та ми зателефонуємо Вам для уточнення деталей</p>
-            <div class="products_count">Залишилося <span class="lastpack"> менше < 20</span> комплектів</div>
+            <div class="products_count">Залишилося <span class="lastpack"> менше &lt; 20</span> комплектів</div>
             <form id="form" class="order_form">
                <input type="hidden" name="sendemail" value="yes" /><input type="hidden" name="redirect" value="yes" />
 
                <input class="field" type="text" name="name" placeholder="Введіть Ваше ім&#39;я" required="" />
                <input class="field" type="text" name="phone" id="phone" placeholder="Введіть Ваш телефон" required="" />
 
-               <button class="button">
+               <div class="button">
+                  <button class="button">
+                     <span>Оформити замовлення</span>
+                  </button>
                   <div class="button-hover"></div>
-                  <span>Оформити замовлення</span>
-               </button>
+               </div>
             </form>
             <div class="products_count">Другий набір за супер-ціною <span class="lastpack bg-red">399 грн</span></div>
          </section>
@@ -345,7 +356,7 @@
          </footer>
       </div>
       <!-- scripts -->
-      <script src="./styles/scripts.js"></script>
-      <script type="text/javascript" src="./styles/date.js"></script>
+      <script src="./styles/scrollTopButton.js"></script>
+      <script src="./styles/date.js"></script>
    </body>
 </html>
