--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -194,7 +194,7 @@
             </div>
          </section>
          <section class="description_section s5">
-            <h3 class="title">Компактні та легкі <span hidden>точкові світильники</span></h3>
+            <h3 hidden>Компактні та легкі <span>точкові світильники</span></h3>
             <div class="img">
                <img src="./images/06-1.jpg" alt="light in hand" />
                <img src="./images/08-1.jpg" alt="light and remote controller" />
