added form send script

--- a/Светильники/index.html
+++ b/Светильники/index.html
@@ -330,33 +330,21 @@
                <input class="field" type="text" name="phone" id="phone" placeholder="Введіть Ваш телефон" required="" />
 
                <div class="button">
-                  <button class="button">
+                  <button class="button submit" type="submit">
                      <span>Оформити замовлення</span>
                   </button>
                   <div class="button-hover"></div>
                </div>
             </form>
+            <div class="form-message"></div>
+
             <div class="products_count">Другий набір за супер-ціною <span class="lastpack bg-red">399 грн</span></div>
          </section>
-         <footer class="footer_section">
-            <!-- <div style="text-align: center">
-               <footer class="footer_section">
-                  <footer class="footer_section">
-                     <p>ФОП Литвинов Сергій Володимирович</p>
-                     <p>ЄДРПОУ 32110361</p>
-                     <p>вул Попудренка, 46, м. Київ , 02112</p>
-                     <p>Режим роботи: Пн - Нд: 09:00 - 21:00</p>
-                     <p>skripz.com.ua@gmail.com</p>
-                     <a href="http://skripz.com.ua/politics" target="_blank">Політика конфіденційності</a>
-                     <a href="http://skripz.com.ua/agreement" target="_blank">Угода користувача</a>
-                     <a href="http://skripz.com.ua/guarantee" target="_blank">Умови гарантії та повернення</a>
-                  </footer>
-               </footer>
-            </div> -->
-         </footer>
+         <footer class="footer_section"></footer>
       </div>
       <!-- scripts -->
-      <script src="./styles/scrollTopButton.js"></script>
-      <script src="./styles/date.js"></script>
+      <script src="./scrollTopButton.js"></script>
+      <script src="./date.js"></script>
+      <script src="./form-send.js"></script>
    </body>
 </html>
