change name and href navigate

--- a/Светильники/led-svytylnyk.html
+++ b/Светильники/led-svytylnyk.html
@@ -67,7 +67,7 @@
                <li>Доступні два режими регулювання яскравості</li>
                <li>Таймер виключення на 30 хвилин</li>
             </ul>
-            <a href="index.html#form" class="button">
+            <a href="#form" class="button">
                <div class="button-hover"></div>
                <span> Придбати зі знижкою</span>
             </a>
@@ -139,7 +139,7 @@
                   <strong>У разі BlackOut — цей ліхтар буде вашим надійним помічником</strong> у подібних ситуаціях.
                </p>
             </div>
-            <a href="index.html#form" class="button">
+            <a href="#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
             </a>
@@ -200,7 +200,7 @@
                <img src="./images/08-1.jpg" alt="light and remote controller" />
             </div>
             <br />
-            <a href="index.html#form" class="button">
+            <a href="#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зі знижкою</span>
             </a>
@@ -239,7 +239,7 @@
                   </div>
                </div>
             </div>
-            <a href="index.html#form" class="button">
+            <a href="#form" class="button">
                <div class="button-hover"></div>
                <span> Замовити зараз</span>
             </a>
@@ -274,14 +274,6 @@
             </div>
          </section>
          <section class="offer_section offer3">
-            <!-- <div class="title_block black">
-               <h1 class="main_title">Будь готовим до BlackOut</h1>
-               <p class="subtitle">зі сподіванням що орки обломляться</p>
-               <p class="subtitle">5% з продажУ кожного LED підуть на потреби ЗСУ</p>
-            </div>
-            <img class="offer_image" src="./images/coulage-5.jpg" alt="coulage of lights" />
-            <img class="offer_image" src="./images/02.webp" alt="набір світильників світлодіодних 3 шт" /> -->
-
             <div class="title_block">
                <h2 class="main_title">Набір яскравих 3шт <br />LED-світильників</h2>
                <p class="subtitle">З пультом керування, на батарейках</p>
