--- a/Светильники/led-svytylnyk.html
+++ b/Светильники/led-svytylnyk.html
@@ -248,7 +248,7 @@
             <p class="title">Доставка і оплата</p>
             <div class="order_info_list2">
                <div class="info_item">
-                  <img src="./images/доставка/images.jpg" alt="delivery car and man with box" />
+                  <img src="./images/dostavka/images.jpg" alt="delivery car and man with box" />
                   <div class="text_block">
                      <h4>Зручна доставка</h4>
                      <p>
@@ -258,14 +258,14 @@
                   </div>
                </div>
                <div class="info_item">
-                  <img src="./images/оплата/oplata-img.png" alt="wallet and cash" />
+                  <img src="./images/oplata/oplata-img.png" alt="wallet and cash" />
                   <div class="text_block">
                      <h4>Захищена оплата</h4>
                      <p>Отримайте товар у відділенні та сплатіть на місці</p>
                   </div>
                </div>
                <div class="info_item">
-                  <img src="./images/гарантія/garantiya.png" alt="garanty label" />
+                  <img src="./images/garantii/garantiya.png" alt="garanty label" />
                   <div class="text_block">
                      <h4>100% якісний продукт</h4>
                      <p>Більше ніж 800 покупців вже оцінили якість та ефективність цього набору LED-світильників</p>
