--- a/Светильники/led-svytylnyk.html
+++ b/Светильники/led-svytylnyk.html
@@ -321,7 +321,7 @@
                <input class="field" type="text" name="name" placeholder="Введіть Ваше ім&#39;я" required="" />
                <input class="field" type="text" name="phone" id="phone" placeholder="Введіть Ваш телефон" required="" />
 
-               <div class="button">
+               <div class="div-form-submit">
                   <button class="button submit" type="submit">
                      <span>Оформити замовлення</span>
                   </button>
